[package]
name = "accumulator"
version = "0.1.0"
authors = ["Stephen Battista <stephen.battista@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accumulator = { git = "https://github.com/cambrian/accumulator.git", tag = "v0.2.1" }
rand = "0.7.2"
indicatif = "0.12.*"
